change the title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="header">
         <h1>IS IT WORKING ?</h1>
-        <h1>BE CARREFULL, YOU ARE GONNA BE SEND ON GITHUB</h1>
+        <h1>BE CARREFULL, it's on</h1>
       </div>
     </div>
   </body>
