--- a/index.html
+++ b/index.html
@@ -1,17 +1,45 @@
+<!-- /exercises/08-comic.html -->
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Making Art on the Web: Day 2</title>
-    <link href="https://fonts.googleapis.com/css?family=Kosugi+Maru" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <title>My Comic Title</title>
+    <link rel="stylesheet" href="../css/comic.css">
   </head>
   <body>
-    <div class="container">
-      <div class="header">
-        <h1>IS IT WORKING ?</h1>
-        <h1>BE CARREFULL, it's on</h1>
+    <div class="main">
+      <div class="case1">
+        <div class="wav-con vitesse1">
+          <div class="wave"></div>
+          <div class="bottom"></div>
+        </div>
       </div>
+      <div class="case2">
+        <div class="wav-con vitesse2">
+          <div class="wave"></div>
+          <div class="bottom"></div>
+        </div>
+      </div>
+      <div class="case3">
+        <div class="wav-con vitesse3">
+        <div class="wave"></div>
+        <div class="bottom"></div>
+      </div></div>
     </div>
+    Comic Waves
+    <!-- 
+      Code your comic here! 
+      - HTML & CSS ONLY
+      - No text required, can be purely visual
+      - You may work in pairs if you like
+      - Make sure you write a blog post about your work! Your vision, process, challenges faced/lessons learned.
+
+      I wanted to do something with wave, several waves, with different speed and color, on different plan, like paralax.
+      I found some help on web, to build a wave in css only, with 3 circle, 2 below and 1 above.
+      The challenge is to multiplicate object on css, and modify their property, like color or size.
+      I succeed to modify their speed, but not their color, 
+      so now, I think I should have used SVG
+      And I learn the concept of ::before and ::after in css, that I have already heard about, but never used.
+
+     -->
   </body>
 </html>
