add animation fade

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
       - You may work in pairs if you like
       - Make sure you write a blog post about your work! Your vision, process, challenges faced/lessons learned.
 
-      I wanted to do something with wave, several waves, with different speed and color, on different plan, like paralax.
-      I found some help on web, to build a wave in css only, with 3 circle, 2 below and 1 above.
-      The challenge is to multiplicate object on css, and modify their property, like color or size.
-      I succeed to modify their speed, but not their color, 
+      I wanted to do something minimal with wave, several waves, with different speed and color. and to interact with them
+      so i build wave with 3 circles, 2 below and 1 above.
+      The challenge was to multiplicate object, and reutilisate them in the 3 pannel
+      and animate their property differently as they have the same classname, .
       so now, I think I should have used SVG
-      And I learn the concept of ::before and ::after in css, that I have already heard about, but never used.
+      And I learn the concept of ::before and ::after selector in css, that I have already heard about, but never used.
 
      -->
   </body>
