--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>My Comic Title</title>
-    <link rel="stylesheet" href="../css/comic.css">
+    <link rel="stylesheet" href="./css/comic.css">
   </head>
   <body>
     <div class="main">
